# laser-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny-wire.toml  deny.toml  docker-compose.yml  justfile  osv-scanner.toml  ruff.toml
.claude/skills/a2a-bridge/: SKILL.md
.claude/skills/agent-runtime/: SKILL.md
.claude/skills/context-and-memory/: SKILL.md
.claude/skills/examples-and-testing/: SKILL.md
.claude/skills/kv/: SKILL.md
.claude/skills/laser-sdk-overview/: SKILL.md
.claude/skills/provenance/: SKILL.md
.claude/skills/query/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-python.yml  ci-rust.yml  ci-typescript.yml  security-typescript.yml
bdd/: README.md  docker-compose.yml
bdd/python/: conftest.py  pytest.ini  reference.py  test_agent.py  test_bridges.py  test_capabilities.py  test_governance.py  test_graph.py  test_kv.py  test_memory.py  test_provenance.py  test_query.py  test_runs.py  test_streaming.py
bdd/rust/: Cargo.toml  Dockerfile
bdd/rust/src/: graph_engine.rs  kv_engine.rs  lib.rs  memory_engine.rs  query_engine.rs
bdd/rust/tests/: open.rs
bdd/rust/tests/common/: container.rs  mod.rs  world.rs
bdd/rust/tests/steps/: agent.rs  bridges.rs  capabilities.rs  governance.rs  graph.rs  kv.rs  memory.rs  mod.rs  platform.rs  query.rs  runs.rs  streaming.rs
bdd/scenarios/: agent.feature  agent_must_understand.feature  bridges.feature  capabilities.feature  capabilities_injected.feature  governance.feature  graph.feature  kv_cas.feature  memory.feature  provenance.feature  query.feature  runs.feature  streaming.feature
bdd/typescript/: Dockerfile  cucumber.js  package-lock.json  package.json  tsconfig.json
docs/: agdx.md  building-agents.md  interop.md  tutorial.md
examples/: README.md
examples/certs/: laserdata_dev.crt
examples/python/: README.md  _common.py  concierge.py  event_analytics.py  firehose.py  governance.py  interop.py  memory.py  memory_bench.py  native_streaming.py  orchestra.py  order_book.py  recall.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: lib.rs
examples/rust/src/concierge/: README.md  main.rs
examples/rust/src/event-analytics/: README.md  main.rs
examples/rust/src/firehose/: README.md  main.rs
examples/rust/src/governance/: README.md  main.rs
examples/rust/src/interop/: README.md  main.rs
examples/rust/src/memory/: README.md  main.rs
examples/rust/src/memory-bench/: README.md  main.rs
examples/rust/src/native-streaming/: README.md  main.rs
examples/rust/src/orchestra/: README.md  main.rs
examples/rust/src/order-book/: README.md  main.rs
examples/rust/src/recall/: README.md  main.rs
examples/typescript/: README.md  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
foreign/python/: .gitignore  Cargo.toml  README.md  laser_sdk.pyi  pyproject.toml
foreign/python/src/: agdx.rs  agent.rs  agent_runtime.rs  async_bridge.rs  blob.rs  chunks.rs  client.rs  context.rs  convert.rs  crash_context.rs  errors.rs  fork.rs  govern.rs  graph.rs  intent.rs  interop.rs  kv.rs  lib.rs  memory.rs  publish.rs  query.rs  rbac.rs  reader.rs  runs.rs  schema.rs  sign.rs  snapshot.rs  state_store.rs  stream.rs  swarm.rs  transport.rs  typed.rs  watch.rs  workflow.rs
foreign/python/tests/: conftest.py  test_integration.py  test_rbac.py  test_readme_snippets.py  test_smoke.py
foreign/typescript/: .prettierignore  README.md  api-extractor.full.json  api-extractor.json  api-extractor.opentelemetry.json  api-extractor.testing.json  eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_envelope.rs  frame_decode.rs
scripts/: run-bdd-tests.sh
sdk/: Cargo.toml  README.md
sdk/certs/: laserdata.crt
sdk/src/: a2a.rs  agent_tasks.rs  agui.rs  batching.rs  blob.rs  capabilities.rs  context.rs  context_scope.rs  control.rs  crash_context.rs  cursor.rs  edge_auth.rs  error.rs  govern.rs  graph.rs  intent.rs  laser.rs  lib.rs  managed.rs  mcp.rs  memory.rs  message.rs  poll.rs  prelude.rs  projections.rs  runs.rs  schema_codecs.rs  sign.rs  snapshot.rs  state_store.rs  stream.rs  swarm.rs  testing.rs  typed.rs  watch.rs
sdk/src/agent/: agdx.rs  assembler.rs  builder.rs  clock.rs  consumer.rs  contract.rs  ctx.rs  laser.rs  memory_handler.rs  mod.rs  registry.rs  replies.rs  router.rs  scope.rs  session.rs  state.rs  workflow.rs
sdk/src/fork/: client.rs  mod.rs
sdk/src/kv/: client.rs  mod.rs
sdk/src/provenance/: keys.rs  mod.rs  runtime.rs  topic.rs
sdk/src/query/: client.rs  mod.rs  record.rs
sdk/src/rbac/: mod.rs
sdk/src/stream/: publish.rs  record.rs  transport.rs
sdk/src/types/: ids.rs  mod.rs
sdk/tests/: alloc.rs  signature_interop.rs
sdk/tests/fixtures/: typescript_signature.json
sdk/tests/integration/: a2a.rs  agdx_consume.rs  agdx_stream.rs  agui.rs  context.rs  contract.rs  deadletter.rs  decomposition.rs  fanout.rs  governance.rs  handoff.rs  harness.rs  human_input.rs  iggy_container.rs  main.rs  managed_unsupported.rs  mcp.rs  memory.rs  provenance.rs  reconnect.rs  reliable.rs  replay.rs  request.rs  runtime.rs  session.rs  shutdown.rs  state.rs  streaming.rs  typed_topics.rs  warm_dedup.rs  workflow.rs
wire/: Cargo.toml  NOTICE  README.md
wire/fixtures/: browse_projections.json  browse_schemas.json  capabilities.json  error_body.json  fork_info.json  kv_page_view.json  query_result.json  schema_def.json
wire/src/: agent.rs  agent_workflow.rs  authz.rs  batch.rs  browse.rs  change.rs  clients.rs  codecs.rs  codes.rs  commands.rs  content.rs  control.rs  encoding.rs  error.rs  fixtures.rs  fork.rs  forward.rs  framing.rs  graph.rs  hashing.rs  headers.rs  hello.rs  http.rs  http_client.rs  kv.rs  lib.rs  limits.rs  memory.rs  mutation.rs  query.rs  result.rs  snapshot.rs  topics.rs  topology.rs  validate.rs
wire/tests/: constants.rs  robustness.rs  wire_fixtures.rs
(+275 files in other folders)
