[workspace]
exclude = ["bdd/rust", "foreign/python", "fuzz"]
members = ["examples/rust", "sdk", "wire"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/laserdata/laser-sdk"
rust-version = "1.96"
version = "0.0.1-rc.16"

[workspace.dependencies]
apache-avro = { version = "0.21.0" }
async-trait = { version = "0.1.91" }
axum = { version = "0.8.9" }
blake3 = { version = "1.8.5" }
bon = { version = "3.9.3" }
bson = { version = "3.1.0", features = ["serde"] }
bytes = { version = "1.12.1" }
ciborium = { version = "0.2.2" }
colored = { version = "3.1.1" }
dashmap = { version = "6.2.1" }
dtor = { version = "1.0" }
ed25519-dalek = { version = "3.0.0" }
futures = { version = "0.3.33" }
iggy = { version = "0.10.3-edge.1" }
json-patch = { version = "4.2.0" }
jsonschema = { version = "0.48.1", default-features = false }
laser-sdk = { path = "sdk" }
laser-wire = { path = "wire", version = "=0.0.1-rc.16" }
prost = { version = "0.14.4" }
prost-reflect = { version = "0.16.5", features = ["serde"] }
protox = { version = "0.9.1" }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rmp-serde = { version = "1.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7.1" }
serial_test = { version = "3.5.0" }
sha2 = { version = "0.11.0" }
strum = { version = "0.28.0", features = ["derive"] }
tempfile = { version = "3.27.0" }
testcontainers-modules = { version = "0.15.0", features = ["http_wait"] }
thiserror = { version = "2.0.19" }
time = { version = "0.3.53", default-features = false }
tokio = { version = "1.53.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trait-variant = { version = "0.1.2" }
ulid = { version = "3.0.0" }
