[package]
name = "laser-sdk"
description = "Open data-platform SDK over Apache Iggy: typed streaming, declared projections and a query DSL, a key-value store, copy-on-write forks, and an optional agent runtime with the Agent Data Exchange Protocol (AGDX)."
categories = ["asynchronous", "network-programming"]
keywords = ["iggy", "agents", "streaming", "provenance", "messaging"]
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["agent", "provenance"]
# The A2A bridge ADAPTER: map A2A JSON-RPC methods onto agent topics and drive the
# task lifecycle (submit / task / cancel / card). Transport-agnostic, no HTTP deps.
a2a-bridge = ["agent", "dep:serde_json"]
# Add the ready-made axum HTTP router for the A2A bridge. Opt-in: the adapter
# above is usable over any transport (or programmatically) without axum.
a2a-http = ["a2a-bridge", "dep:axum", "dep:strum"]
# AG-UI state sync: emit `state_snapshot`/`state_delta` events and reconstruct
# shared state by replaying them (RFC 6902 JSON Patch), over the log not SSE.
agui = ["agent", "dep:json-patch", "dep:serde_json"]
agent = [
    "dep:async-trait",
    "dep:dashmap",
    "dep:tokio",
    "dep:tracing",
    "dep:trait-variant",
    "provenance",
]
# Zero-dep gate so the Iggy-backed integration target is opt-in: `cargo test
# --workspace` stays unit-only and Docker-free. testcontainers is a dev-dep.
integration = []
# Managed key-value store over the `AGDX_KV` managed commands, backed by LaserData Cloud's
# point-state backend. Rides the same managed bridge as `query`, so it builds on it.
kv = ["query"]
# The MCP bridge ADAPTER: map MCP tool calls / results onto AGDX commands /
# responses, plus the tool / resource / prompt catalog. No HTTP deps.
mcp-bridge = ["agent", "dep:serde_json"]
# Add the ready-made axum HTTP router for the MCP bridge. Opt-in.
mcp-http = ["mcp-bridge", "dep:axum", "dep:strum"]
provenance = []
# Client-side schema-first codec helpers: compile a registered `SchemaDef`
# (Avro / Protobuf) locally, encode Avro bodies from serde values, and validate
# payloads against the registered definition before publishing - the same
# decode semantics LaserData Cloud's projector applies.
schema-codecs = ["dep:apache-avro", "dep:jsonschema", "dep:prost-reflect", "query"]
# Envelope signing and verification: activate the dormant `Signature` field with
# Ed25519 keys and a per-agent key registry keyed by the enrolled principal. The
# wire crate stays crypto-free, so the crypto lives here behind this gate.
sign = ["agent", "dep:ed25519-dalek", "dep:sha2"]
# Generic queryable projections over the log: the runtime over the laser-wire
# contract (Record lowering, Laser::publish/query, the fluent builders) - the
# generic substrate. No agent dependency. Enables the wire crate's codec
# surface (including the native-only Bson codec, the SDK is native anyway).
query = [
    "dep:dashmap",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
    "laser-wire/bson",
    "laser-wire/codecs",
]

[dependencies]
apache-avro = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
bon = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
iggy = { workspace = true }
json-patch = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }
laser-wire = { workspace = true, features = ["builders", "cbor"] }
prost-reflect = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
trait-variant = { workspace = true, optional = true }
ulid = { workspace = true }

[dev-dependencies]
apache-avro = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dtor = { workspace = true }
iggy = { workspace = true }
laser-wire = { workspace = true, features = ["builders", "cbor", "fixtures"] }
prost = { workspace = true }
protox = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration/main.rs"
required-features = ["integration"]
